<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gold"
    android:backgroundTint="#A6F8F7F7"
    android:backgroundTintMode="multiply"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dip"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dip"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:paddingTop="10dp"
            android:text="@string/studName"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:paddingTop="10dp"
            android:text="@string/studGroup"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="serif"
            android:paddingTop="10dp"
            android:text="@string/studID"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:fontFamily="serif"
            android:text="  Click This Link"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvURL"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="32dip"
            android:background="@drawable/button_cust"
            android:backgroundTint="#48C8C1C1"
            android:backgroundTintMode="src_over"
            android:clickable="true"
            android:fontFamily="serif"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="https://github.com/aliahI01/Zakat-on-Gold.git"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dip"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>